# Rust-101-Crash-Course-8-hours

./: Cargo.toml  README.MD
AllLesson/Lesson1/src/: main.rs
AllLesson/Lesson3-Variables/: Cargo.toml  variable.md  variables-advanced.md
AllLesson/Lesson3-Variables/src/: main.rs
AllLesson/lesson1/src/: main.rs
AllLesson/lesson2/src/: main.rs
AllLesson/lesson3/: variables-advanced.md
AllLesson/lesson3/src/: main.rs
Doc/: Fix-Cargo.lock.md  Fix-CargoToml.md  Install-Project.md
src/: main.rs
static/: index.html  lesson_template.html  style.css
static/css/: style.css
static/html/: index.html
