[package]
name = "rust-101-crash-course"
version = "0.1.0"
edition = "2021"

[dependencies]

# Thiết lập thư viện Actix Web: actix-web
# Actix Web là một framework web mạnh mẽ cho Rust, hỗ trợ phát triển các ứng dụng web hiệu suất cao.
# Nó cung cấp các tính năng như routing, middleware, và xử lý HTTP request/response.
actix-web = "4.9.0"

# Thiết lập thư viện async runtime: tokio
# Tokia cung cấp nền tảng xử lý bất đồng bộ, giúp chạy các tác vụ song song
# và hỗ trợ async/await cho các tác vụ I/O, xử lý mạng, v.v.
tokio = { version = "1", features = ["full"] }

tera = "1.20.0"
actix-files = "0.6" # Thêm dòng này để sử dụng actix-files

# Thiết lập workspace cho tất cả bài học
[workspace]
members = [
    "AllLesson/lesson1",
    "AllLesson/lesson2",
    "AllLesson/lesson3",
    "AllLesson/lesson4",
    "AllLesson/lesson5",
    "AllLesson/lesson6",
]
